--- a/eghv/localization/es_es/frontend_wondrousgoodyhuts_text.xml
+++ b/eghv/localization/es_es/frontend_wondrousgoodyhuts_text.xml
@@ -9,84 +9,84 @@
 	<LocalizedText>
 		<!-- tooltip text -->
 		<Replace Tag="LOC_WGH_TT" Language="es_ES">
-			<Text>[NEWLINE] [COLOR_Blue] Mod [ENDCOLOR]: [COLOR_Civ6Yellow] Maravilloso [ENDCOLOR] Goody Huts</Text>
+			<Text>[NEWLINE]  [COLOR_Blue]Mod[ENDCOLOR]: [COLOR_Civ6Yellow]Maravillosas[ENDCOLOR] Cabañas de Regalos</Text>
 		</Replace>
 		<!-- random resource -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_NAME" Language="es_ES">
 			<Text>Encontrar nuevo recurso</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMRESOURCE_DESC" Language="es_ES">
-			<Text>Descubre un nuevo recurso en una trama aleatoria en un territorio controlado por el jugador.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Descubre un nuevo recurso en una trama aleatoria en el territorio que controlas.</Text>
 		</Replace>
 		<!-- random unit -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_NAME" Language="es_ES">
 			<Text>1 unidad única</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMUNIT_DESC" Language="es_ES">
-			<Text>Recibe una (1) unidad única aleatoria, posiblemente una que sea exclusiva de una civilización distinta a la del jugador.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Reciba una (1) unidad aleatoria, posiblemente una que sea exclusiva de otra Civilización.</Text>
 		</Replace>
 		<!-- random improvement -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_NAME" Language="es_ES">
 			<Text>1 Mejora</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMIMPROVEMENT_DESC" Language="es_ES">
-			<Text>Recibe una (1) mejora aleatoria, posiblemente una que sea exclusiva de una civilización distinta a la del jugador.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Reciba una (1) mejora aleatoria, posiblemente una que sea exclusiva de otra Civilización.</Text>
 		</Replace>
 		<!-- sight bomb -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_NAME" Language="es_ES">
 			<Text>[ICON_Ability] Entrenamiento en la naturaleza</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SIGHTBOMB_DESC" Language="es_ES">
-			<Text>A la unidad receptora se le otorga la habilidad [ICON_Ability] Entrenamiento en la naturaleza (+2 de vista, puede ver a través de las características).</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]La unidad receptora recibe la habilidad [ICON_Ability] Entrenamiento en la naturaleza (+2 Vista, puede ver a través de las funciones).</Text>
 		</Replace>
 		<!-- random policy -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_NAME" Language="es_ES">
 			<Text>1 Política de [ICON_Policy]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_RANDOMPOLICY_DESC" Language="es_ES">
-			<Text>Desbloquea una (1) política [ICON_Policy] aleatoria de la Era actual.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Desbloquee una (1) [ICON_Policy] política aleatoria de la era actual.</Text>
 		</Replace>
 		<!-- formation -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_NAME" Language="es_ES">
 			<Text>Actualizar la formación [ICON_Corps]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_FORMATION_DESC" Language="es_ES">
-			<Text>La unidad receptora tiene su formación [ICON_Corps] mejorada.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]La unidad receptora tiene su [ICON_Corps]/[ICON_Army] formación mejorada, si corresponde.</Text>
 		</Replace>
 		<!-- natural wonder -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_NAME" Language="es_ES">
 			<Text>Revelar maravilla natural</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_WONDER_DESC" Language="es_ES">
-			<Text>Descubra una maravilla natural no revelada.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Descubra una maravilla natural no revelada.</Text>
 		</Replace>
 		<!-- city-state -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_NAME" Language="es_ES">
 			<Text>Conoce ciudad-estado</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_CITYSTATE_DESC" Language="es_ES">
-			<Text>Descubra una ciudad-estado insatisfecha.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Descubre una ciudad-estado insatisfecha.</Text>
 		</Replace>
 		<!-- spy -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_NAME" Language="es_ES">
 			<Text>1 [ICON_Unit] espía</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_SPY_DESC" Language="es_ES">
-			<Text>Reciba una (1) unidad espía gratis.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Reciba un (1) [ICON_Unit] espía gratis en una ciudad aleatoria.</Text>
 		</Replace>
 		<!-- production boost -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_NAME" Language="es_ES">
 			<Text>[ICON_Production] Ráfaga de producción</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_PRODUCTION_DESC" Language="es_ES">
-			<Text>La ciudad capital de [ICON_Capital] del jugador recibe una ráfaga de producción de [ICON_Production] que completa el artículo actual en su cola de producción.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]Recibe una ráfaga de [ICON_Production] producción en una ciudad aleatoria, que completa el elemento actual en su cola de producción.</Text>
 		</Replace>
 		<!-- teleport -->
 		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_NAME" Language="es_ES">
 			<Text>Gira mundial</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_SAILOR_TELEPORT_DESC" Language="es_ES">
-			<Text>La unidad receptora se embarca en una expedición a una baldosa lejana. Está unido por una (1) unidad de colonos libre.</Text>
+			<Text>Recompensa de tipo maravilloso de nivel 5 (mítico).[NEWLINE][NEWLINE]La unidad receptora se teletransporta instantáneamente a una casilla lejana. En esta gira mundial se le une un (1) [ICON_Unit] colono gratuito.</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
