--- a/eghv/localization/es_es/ingame_xp1_text.xml
+++ b/eghv/localization/es_es/ingame_xp1_text.xml
@@ -9,16 +9,16 @@
 	<LocalizedText>
 		<!-- new goody hut reward descriptions : governors-type -->
 		<Replace Tag="LOC_GOODYHUT_GOVERNORS_ONE_TITLE_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] Un cargo de gobernador de [ICON_Government] [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]Un [ICON_Government] título de gobernador[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_GOVERNORS_TWO_TITLES_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] Dos títulos de gobernador de [ICON_Government] [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]Dos [ICON_Government] títulos de gobernador[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_GOVERNORS_THREE_TITLES_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] Tres títulos de gobernador de [ICON_Government] [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]Tres [ICON_Government] títulos de gobernador[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_GOVERNORS_FOUR_TITLES_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] Cuatro títulos de gobernador de [ICON_Government] [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]Cuatro [ICON_Government] títulos de gobernador[ENDCOLOR]</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
