--- a/eghv/localization/es_es/ingame_xp2_text.xml
+++ b/eghv/localization/es_es/ingame_xp2_text.xml
@@ -9,36 +9,40 @@
 	<LocalizedText>
 		<!-- Villager Favor totem building -->
         <Replace Tag="LOC_BUILDING_FAVOR_TOTEM_NAME" Language="es_ES">
-			<Text>Tótem de diplomacia</Text>
+			<Text>Tótem de la Diplomacia</Text>
 		</Replace>
         <Replace Tag="LOC_BUILDING_FAVOR_TOTEM_DESC" Language="es_ES">
-			<Text>Un tótem grabado con runas aprendidas de los habitantes de un pueblo olvidado, que se cree promueve la resolución adecuada de conflictos.[NEWLINE][NEWLINE]+4 [ICON_Favor] Favor diplomático</Text>
+			<Text>Un tótem grabado con runas aprendidas de los habitantes de un pueblo olvidado, que se cree promueve la resolución adecuada de conflictos.[NEWLINE][NEWLINE]+4 [ICON_Favor]</Text>
 		</Replace>
+		<!-- new goody hut reward descriptions : secrets-type -->
+        <Replace Tag="LOC_GOODYHUT_VILLAGER_SECRETS_FAVOR_DESCRIPTION" Language="es_ES">
+            <Text>[ICON_Buildings] Tótem de la Diplomacia desbloqueado o construido</Text>
+        </Replace>
 		<!-- new goody hut reward descriptions : diplomacy-type -->
 		<Replace Tag="LOC_GOODYHUT_SMALL_FAVOR_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +10 [ICON_FAVOR] Favor diplomático [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+10 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_MEDIUM_FAVOR_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +20 [ICON_FAVOR] Favor diplomático [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+20 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_LARGE_FAVOR_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +30 [ICON_FAVOR] Favor diplomático [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+30 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_HUGE_FAVOR_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +50 [ICON_FAVOR] Favor diplomático [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+50 [ICON_FAVOR][ENDCOLOR]</Text>
 		</Replace>
 		<!-- new goody hut reward descriptions : resources-type -->
 		<Replace Tag="LOC_GOODYHUT_SMALL_RESOURCES_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_MILITARY] +10 recursos estratégicos [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+10 recursos estratégicos[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_MEDIUM_RESOURCES_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_MILITARY] +20 recursos estratégicos [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+20 recursos estratégicos[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_LARGE_RESOURCES_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_MILITARY] +30 recursos estratégicos [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+30 recursos estratégicos[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_HUGE_RESOURCES_DESCRIPTION" Language="es_ES">
-			<Text>[COLOR_FLOAT_MILITARY] +50 recursos estratégicos [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+50 recursos estratégicos[ENDCOLOR]</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
