--- a/eghv/localization/fr_fr/ingame_xp2_text.xml
+++ b/eghv/localization/fr_fr/ingame_xp2_text.xml
@@ -9,36 +9,40 @@
 	<LocalizedText>
 		<!-- Villager Favor totem building -->
         <Replace Tag="LOC_BUILDING_FAVOR_TOTEM_NAME" Language="fr_FR">
-			<Text>Totem diplomatie</Text>
+			<Text>Totem de la Diplomatie</Text>
 		</Replace>
         <Replace Tag="LOC_BUILDING_FAVOR_TOTEM_DESC" Language="fr_FR">
-			<Text>Un totem gravé de runes apprises des habitants d'un village oublié, censé favoriser une bonne résolution des conflits.[NEWLINE][NEWLINE]+4 [ICON_Favor] Faveur diplomatique</Text>
+			<Text>Un totem gravé de runes apprises des habitants d'un village oublié, censé favoriser une bonne résolution des conflits.[NEWLINE][NEWLINE]+4 [ICON_Favor]</Text>
 		</Replace>
+		<!-- new goody hut reward descriptions : secrets-type -->
+        <Replace Tag="LOC_GOODYHUT_VILLAGER_SECRETS_FAVOR_DESCRIPTION" Language="fr_FR">
+            <Text>[ICON_Buildings] Totem de la Diplomatie débloqué ou construit</Text>
+        </Replace>
 		<!-- new goody hut reward descriptions : diplomacy-type -->
 		<Replace Tag="LOC_GOODYHUT_SMALL_FAVOR_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +10 [ICON_Favor] faveur diplomatique [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+10 [ICON_Favor][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_MEDIUM_FAVOR_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +20 [ICON_Favor] faveur diplomatique [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+20 [ICON_Favor][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_LARGE_FAVOR_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +30 [ICON_Favor] faveur diplomatique [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+30 [ICON_Favor][ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_HUGE_FAVOR_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_DIPLOMATIC] +50 [ICON_Favor] faveur diplomatique [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_DIPLOMATIC]+50 [ICON_Favor][ENDCOLOR]</Text>
 		</Replace>
 		<!-- new goody hut reward descriptions : resources-type -->
 		<Replace Tag="LOC_GOODYHUT_SMALL_RESOURCES_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_MILITARY] +10 Ressources stratégiques [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+10 Ressources stratégiques[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_MEDIUM_RESOURCES_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_MILITARY] +20 ressources stratégiques [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+20 ressources stratégiques[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_LARGE_RESOURCES_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_MILITARY] +30 ressources stratégiques [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+30 ressources stratégiques[ENDCOLOR]</Text>
 		</Replace>
 		<Replace Tag="LOC_GOODYHUT_HUGE_RESOURCES_DESCRIPTION" Language="fr_FR">
-			<Text>[COLOR_FLOAT_MILITARY] +50 ressources stratégiques [ENDCOLOR]</Text>
+			<Text>[COLOR_FLOAT_MILITARY]+50 ressources stratégiques[ENDCOLOR]</Text>
 		</Replace>
 	</LocalizedText>
 </GameData>
